<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flexcom.reading.flexcom.MainActivity"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

</android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btNotConnectedError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/btNotConnectedError"
            android:background="@color/colorRed"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/transmitterNotPairedError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/transmitterNotPairedError"
            android:background="@color/colorRed"
            android:visibility="gone"/>


        <TextView
            android:id="@+id/transmitterNotConnectedError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/transmitterNotConnectedError"
            android:background="@color/colorRed"
            android:visibility="gone"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tvCurrentGlucose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/currentGlucose"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_above="@id/tvAverageGlucose"
            android:textColor="@color/colorBlack"/>


        <TextView
            android:id="@+id/tvAverageGlucose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/averageGlucose"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_above="@id/tvTrendingGlucose"
            android:textColor="@color/colorBlack"/>


        <TextView
            android:id="@+id/tvTrendingGlucose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trendingGlucose"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_alignParentBottom="true"
            android:textColor="@color/colorBlack"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/tvDailyHigh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dailyHigh"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:textColor="@color/colorBlack"/>


        <TextView
            android:id="@+id/tvDailyLow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dailyLow"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_below="@id/tvDailyHigh"
            android:textColor="@color/colorBlack"/>
    </RelativeLayout>



</LinearLayout>
